# SDL-Game-Engine

./: Animator.cpp  CMakeLists.txt  Component.h  Engine.h  EngineValues.h  Game.cpp  Game.h  GameObject.cpp  README.md  SDL_Template.vcxproj  SDL_Template.vcxproj.filters  SpriteComponent.h  TestGame.cpp  TestGame.h  The Game Engine.sln  build.bat  conanfile.txt  main.cpp
Engine/: Animator.cpp  Animator.h  Camera.h  Character.h  ColliderComponent.h  Component.h  GameObject.cpp  GameObject.h  SpriteComponent.h  TextureManager.cpp  TextureManager.h  Tilemap.cpp  Tilemap.h  TransformComponent.h
Game/: Game.cpp  Game.h  InputManager.cpp  InputManager.h
src/: Engine.h  EngineValues.cpp  EngineValues.h  TestGame.h  main.cpp
src/Engine/: Animator.cpp  Character.h  ColliderComponent.h  Component.h  GameObject.cpp  GameObject.h  SpriteComponent.h  TextureManager.cpp  TextureManager.h  TransformComponent.h
src/Game/: Game.cpp  Game.h  InputManager.cpp  InputManager.h
